fixes failing build

--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -22,6 +22,9 @@
     "nativeLanguage": "en",
     "languages": [
       "en"
-    ]
+    ],
+    "clusteredHttpSession": "no",
+    "websocket": "no",
+    "enableSocialSignIn": false
   }
 }
