--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -73,6 +73,11 @@ jhipster:
                 secret: 6dd939187fa617f36e7a70daf17a2d2fb9206068
                 # Token is valid 24 hours
                 tokenValidityInSeconds: 86400
+        clientAuthorization:
+            # change this depending on your authorization server
+            tokenUrl: http://localhost:8080/uaa/oauth/token
+            clientId: internal
+            clientSecret: internal
     mail: # specific JHipster mail property, for standard properties see MailProperties
         from: MessageService@localhost
     metrics: # DropWizard Metrics configuration, used by MetricsConfiguration
