--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ buildscript {
         classpath "org.springframework.build.gradle:propdeps-plugin:0.0.7"
         classpath "se.transmode.gradle:gradle-docker:1.2"
         classpath "io.spring.gradle:dependency-management-plugin:0.5.6.RELEASE"
+        classpath 'org.asciidoctor:asciidoctor-gradle-plugin:1.5.3'
+        classpath 'org.asciidoctor:asciidoctorj-pdf:1.5.0-alpha.11'
+        classpath 'io.github.robwin:swagger2markup-gradle-plugin:0.9.2'
         //jhipster-needle-gradle-buildscript-dependency - JHipster will add additional gradle build script plugins here
     }
 }
@@ -73,6 +76,7 @@ apply from: 'gradle/liquibase.gradle'
 
 apply from: 'gradle/mapstruct.gradle'
 apply from: 'gradle/docker.gradle'
+apply from: 'gradle/swagger2markup.gradle'
 //jhipster-needle-gradle-apply-from - JHipster will add additional gradle scripts to be applied here
 
 if (project.hasProperty('prod')) {
@@ -193,6 +197,7 @@ dependencies {
 
 
     optional "org.springframework.boot:spring-boot-configuration-processor:${spring_boot_version}"
+    testCompile 'io.springfox:springfox-staticdocs:2.4.0'
     //jhipster-needle-gradle-dependency - JHipster will add additional dependencies here
 }
 
