--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -56,6 +56,13 @@ security:
 # ===================================================================
 
 jhipster:
+    security:
+        clientAuthorization:
+            # change this depending on your authorization server
+            tokenUrl: http://userservice:8080/oauth/token
+            tokenServiceId: userservice
+            clientId: internal
+            clientSecret: internal
     async:
         corePoolSize: 2
         maxPoolSize: 50
