feign + double userholder + message write restrict
adds the new version of feign client configuration, fixes double userHolder save and restricts users to write into conversation not beeing member in

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -59,7 +59,7 @@ jhipster:
     security:
         clientAuthorization:
             # change this depending on your authorization server
-            tokenUrl: http://userservice:8080/oauth/token
+            accessTokenUri: http://userservice:8080/oauth/token
             tokenServiceId: userservice
             clientId: internal
             clientSecret: internal
