--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -75,7 +75,7 @@ jhipster:
                 tokenValidityInSeconds: 86400
         clientAuthorization:
             # change this depending on your authorization server
-            tokenUrl: http://userservice:8080/oauth/token
+            accessTokenUri: http://userservice:8080/oauth/token
             tokenServiceId: userservice
             clientId: internal
             clientSecret: internal
