--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -74,7 +74,7 @@ jhipster:
                 tokenValidityInSeconds: 86400
         clientAuthorization:
             # change this depending on your authorization server
-            tokenUrl: http://uaa:9999/oauth/token
+            accessTokenUri: http://uaa:9999/oauth/token
             tokenServiceId: uaa
             clientId: internal
             clientSecret: internal
